feat: initial commit

--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -79,7 +79,8 @@
         <!-- / Menu -->
 
         <!-- Content -->
-        <div layout:fragment="content" class="container-xxl flex-grow-1 container-p-y"> </div>
+        <div layout:fragment="content" class="container-xxl flex-grow-1 container-p-y">
+        </div>
         <!--/ Content -->
 
         <!-- Footer -->
