feat: fixing template

--- a/src/main/resources/templates/pages/home/dashboard.html
+++ b/src/main/resources/templates/pages/home/dashboard.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/main}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
 <!-- Content -->
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-lg-5 col-md-3 col-12 order-1 order-md-2 my-4 my-md-0 text-center">
                   <img
-                          src="../../assets/img/illustrations/card-website-analytics-1.png"
+                          th:src="@{~/img/illustrations/card-website-analytics-1.png}"
                           alt="Website Analytics"
                           height="150"
                           class="card-website-analytics-img" />
@@ -97,7 +97,7 @@
               </div>
               <div class="col-lg-5 col-md-3 col-12 order-1 order-md-2 my-4 my-md-0 text-center">
                 <img
-                        src="../../assets/img/illustrations/card-website-analytics-2.png"
+                        th:src="@{~/img/illustrations/card-website-analytics-2.png}"
                         alt="Website Analytics"
                         height="150"
                         class="card-website-analytics-img" />
@@ -141,7 +141,7 @@
               </div>
               <div class="col-lg-5 col-md-3 col-12 order-1 order-md-2 my-4 my-md-0 text-center">
                 <img
-                        src="../../assets/img/illustrations/card-website-analytics-3.png"
+                        th:src="@{~/img/illustrations/card-website-analytics-3.png}"
                         alt="Website Analytics"
                         height="150"
                         class="card-website-analytics-img" />
