--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html th:lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      th:class=" layout-wide  customizer-hide"
-      th:dir="ltr"
-      th:data-skin="default"
-      th:data-bs-theme="light"
-      th:data-assets-path="@{~/}"
-      th:data-template="horizontal-menu-template">
+      class="layout-wide  customizer-hide" dir="ltr" data-skin="default" data-bs-theme="light"
+      th:data-assets-path="@{~/}" data-template="horizontal-menu-template">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport"
@@ -106,13 +102,13 @@
         <div class="d-none d-xl-flex col-xl-8 p-0">
             <div class="auth-cover-bg d-flex justify-content-center align-items-center">
                 <img
-                        th:src="@{~/img/illustrations/auth-login-illustration-light.png"
+                        th:src="@{~/img/illustrations/auth-login-illustration-light.png}"
                         alt="auth-login-cover"
                         class="my-5 auth-illustration"
                         data-app-light-img="illustrations/auth-login-illustration-light.png"
                         data-app-dark-img="illustrations/auth-login-illustration-dark.png" />
                 <img
-                        th:src="@{~/img/illustrations/bg-shape-image-light.png"
+                        th:src="@{~/img/illustrations/bg-shape-image-light.png}"
                         alt="auth-login-cover"
                         class="platform-bg"
                         data-app-light-img="illustrations/bg-shape-image-light.png"
