--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      th:lang="en" th:class=" layout-navbar-fixed layout-menu-fixed layout-compact "
-      th:dir="ltr" th:data-skin="default" th:data-bs-theme="light"
-      th:data-assets-path="@{/}" th:data-template="horizontal-menu-template">
+      lang="en"
+      class=" layout-navbar-fixed layout-menu-fixed layout-compact "
+      dir="ltr"
+      data-skin="default"
+      data-bs-theme="light"
+      th:data-assets-path="@{/}"
+      data-template="vertical-menu-template">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
   <title>Demo: Dashboard - Analytics | Vuexy - Bootstrap Dashboard PRO</title>
   <meta name="description" content="" />
-  <!-- token -->
-  <meta name="_csrf" th:content="${_csrf.token}"/>
-  <!-- default header name is X-CSRF-TOKEN -->
-  <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" th:href="@{~/img/favicon/favicon.ico}" />
+  <link rel="icon" type="image/x-icon" th:href="@{/img/favicon/favicon.ico}" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"/>
+  <link
+          href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"
+          rel="stylesheet" />
+
   <link rel="stylesheet" th:href="@{~/vendor/fonts/iconify-icons.css}" />
 
   <script th:src="@{~/vendor/libs/@algolia/autocomplete-js.js}"></script>
@@ -33,7 +35,7 @@
   <link rel="stylesheet" th:href="@{~/vendor/libs/pickr/pickr-themes.css}" />
 
   <link rel="stylesheet" th:href="@{~/vendor/css/core.css}" />
-  <link rel="stylesheet" th:href="@{~/css/demo.css}" />
+  <link rel="stylesheet" th:href="@{/css/demo.css}" />
 
   <!-- Vendors CSS -->
 
@@ -64,24 +66,29 @@
 
 <body>
 <!-- Layout wrapper -->
-<div class="layout-wrapper layout-navbar-full layout-horizontal layout-without-menu">
+<div class="layout-wrapper layout-content-navbar  ">
   <div class="layout-container">
-    <!-- Navbar -->
-    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
-    <!-- / Navbar -->
+    <!-- Menu -->
+    <aside th:replace="~{fragments/menu :: menu}"></aside>
+    <div class="menu-mobile-toggler d-xl-none rounded-1">
+      <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large text-bg-secondary p-2 rounded-1">
+        <i class="ti tabler-menu icon-base"></i>
+        <i class="ti tabler-chevron-right icon-base"></i>
+      </a>
+    </div>
+    <!-- / Menu -->
 
     <!-- Layout container -->
     <div class="layout-page">
+      <!-- Navbar -->
+      <nav th:replace="~{fragments/navbar :: navbar}"></nav>
+      <!-- / Navbar -->
+
       <!-- Content wrapper -->
       <div class="content-wrapper">
-        <!-- Menu -->
-        <aside th:replace="~{fragments/menu :: menu}"></aside>
-        <!-- / Menu -->
-
         <!-- Content -->
-        <div layout:fragment="content" class="container-xxl flex-grow-1 container-p-y">
-        </div>
-        <!--/ Content -->
+        <div layout:fragment="content" class="container-xxl flex-grow-1 container-p-y"> </div>
+        <!-- / Content -->
 
         <!-- Footer -->
         <footer th:replace="~{fragments/footer :: footer}"> </footer>
@@ -89,20 +96,18 @@
 
         <div class="content-backdrop fade"></div>
       </div>
-      <!--/ Content wrapper -->
+      <!-- Content wrapper -->
     </div>
-
-    <!--/ Layout container -->
+    <!-- / Layout page -->
   </div>
+
+  <!-- Overlay -->
+  <div class="layout-overlay layout-menu-toggle"></div>
+
+  <!-- Drag Target Area To SlideIn Menu On Small Screens -->
+  <div class="drag-target"></div>
 </div>
-
-<!-- Overlay -->
-<div class="layout-overlay layout-menu-toggle"></div>
-
-<!-- Drag Target Area To SlideIn Menu On Small Screens -->
-<div class="drag-target"></div>
-
-<!--/ Layout wrapper -->
+<!-- / Layout wrapper -->
 
 <!-- Core JS -->
 <!-- build:js assets/vendor/js/theme.js  -->
