--- a/src/main/resources/templates/pages/students/index.html
+++ b/src/main/resources/templates/pages/students/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/main}">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/student}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
