feat: Update folder structure

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -515,10 +515,13 @@
                     </li>
                     <li>
                         <div class="d-grid px-2 pt-2 pb-1">
-                            <a class="btn btn-sm btn-danger d-flex" href="auth-login-cover.html" target="_blank">
-                                <small class="align-middle">Logout</small>
-                                <i class="icon-base ti tabler-logout ms-2 icon-14px"></i>
-                            </a>
+                            <form th:action="@{/logout}" method="post">
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                                <button type="submit" class="btn btn-sm btn-danger d-flex w-100">
+                                    <small class="align-middle">Logout</small>
+                                    <i class="icon-base ti tabler-logout ms-2 icon-14px"></i>
+                                </button>
+                            </form>
                         </div>
                     </li>
                 </ul>
